# H5J_Writer_For_Fiji

./: .gitignore  README.md  pom.xml
cpp/: CMakeLists.txt  FFMpegEncoder.cpp  FFMpegEncoder.h  FFMpegEncoder.version  FFMpegTest.cpp  Wrapper.cpp
src/main/java/org/janelia/it/fiji/plugins/h5j/: FFMpegEncoder.java  H5j_Writer.java
src/main/java/org/janelia/it/fiji/plugins/h5j/lib/linux/: libavdevice.so.58.3.100  libavfilter.so.7.16.100  libavformat.so.58.12.100  libavutil.so.56.14.100  libpostproc.so.55.1.100  libswresample.so.3.1.100  libswscale.so.5.1.100
src/main/java/org/janelia/it/fiji/plugins/h5j/lib/macosx/: libFFMpegEncoder.dylib  libavdevice.58.3.100.dylib  libavfilter.7.16.100.dylib  libavformat.58.12.100.dylib  libavutil.56.14.100.dylib  libpostproc.55.1.100.dylib  libswresample.3.1.100.dylib  libswscale.5.1.100.dylib
src/main/resources/: plugins.config
src/test/java/org/janelia/it/fiji/plugins/h5j/: FFMpegEncoderTest.java
